// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.hbs - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  <style>



  </style>
</div>

<div>
  <style>


    .a {
      color: red;
    }


  </style>
</div>


<div>
  <style>
    .a {



      color: red;
    }
              .b { color:     blue

};
  </style>
</div>

<div>
  <style>
    .a { color: red; }
  </style>
</div>

<div>
  <style>
    .a {
                    color: red;
    }

    invalid css
  </style>
</div>

=====================================output=====================================
<div>
  <style>



  </style>
</div>

<div>
  <style>


    .a {
      color: red;
    }


  </style>
</div>

<div>
  <style
  >
    .a {



      color: red;
    }
              .b { color:     blue

};
  </style>
</div>

<div>
  <style>
    .a { color: red; }
  </style>
</div>

<div>
  <style>
    .a {
                    color: red;
    }

    invalid css
  </style>
</div>
================================================================================
`;

exports[`test.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  <style>



  </style>
</div>

<div>
  <style>


    .a {
      color: red;
    }


  </style>
</div>


<div>
  <style>
    .a {



      color: red;
    }
              .b { color:     blue

};
  </style>
</div>

<div>
  <style>
    .a { color: red; }
  </style>
</div>

<div>
  <style>
    .a {
                    color: red;
    }

    invalid css
  </style>
</div>

=====================================output=====================================
<div>
  <style></style>
</div>

<div>
  <style>
    .a {
      color: red;
    }
  </style>
</div>

<div>
  <style>
    .a {
      color: red;
    }
    .b {
      color: blue;
    }
  </style>
</div>

<div>
  <style>
    .a {
      color: red;
    }
  </style>
</div>

<div>
  <style>
    .a {
                    color: red;
    }

    invalid css
  </style>
</div>
================================================================================
`;
